[gd_scene load_steps=15 format=3 uid="uid://dan7m2c7flsu8"]

[ext_resource type="PackedScene" uid="uid://cgp10p8xr0lh0" path="res://combat/fighter/fighter.tscn" id="1_pgnwb"]
[ext_resource type="Script" path="res://combat/arena/combat_arena.gd" id="1_rjxb1"]
[ext_resource type="PackedScene" uid="uid://bfxyba8lqk48m" path="res://combat/arena/combat_cell.tscn" id="2_jscg4"]
[ext_resource type="PackedScene" uid="uid://bkwtfo02rqixb" path="res://combat/fighter/enemy.tscn" id="4_kmryn"]
[ext_resource type="PackedScene" uid="uid://46fw75u167br" path="res://combat/ui/combat_ui.tscn" id="6_psg6q"]
[ext_resource type="Script" path="res://combat/arena/fighter_manager.gd" id="7_7v0sr"]
[ext_resource type="Script" path="res://combat/fighter/player.gd" id="9_hapqf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_idy3q"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_r8xxc"]
sky_material = SubResource("ProceduralSkyMaterial_idy3q")

[sub_resource type="Environment" id="Environment_6nsb2"]
background_mode = 2
sky = SubResource("Sky_r8xxc")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_p6xq2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j5svg"]
transparency = 1
blend_mode = 1
albedo_color = Color(0, 0.721794, 0.475848, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6i38w"]
material = SubResource("StandardMaterial3D_j5svg")

[sub_resource type="ButtonGroup" id="ButtonGroup_nnna6"]
allow_unpress = true

[node name="CombatArena" type="Node3D"]
script = ExtResource("1_rjxb1")
area_size = 6
fighter_movement_speed = 6.0
cell_prefab = ExtResource("2_jscg4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6nsb2")

[node name="Player" parent="." instance=ExtResource("1_pgnwb")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("9_hapqf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 8.57281e-08, -1.71302e-08, 0, 0.195946, 0.980615, 8.74228e-08, 0.980615, -0.195946, 0, 18.483, -6.472)

[node name="floor" type="MeshInstance3D" parent="."]
transform = Transform3D(15.95, 0, 0, 0, 1, 0, 0, 0, 15.95, 0, 0, 0)
visible = false
mesh = SubResource("PlaneMesh_p6xq2")

[node name="CellRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="Arrow" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arrow"]
transform = Transform3D(1, 0, 0, 0, 6.96, 0, 0, 0, 1, 0, 6, 0)
mesh = SubResource("BoxMesh_6i38w")

[node name="CombatUi" parent="." instance=ExtResource("6_psg6q")]
action_button_group = SubResource("ButtonGroup_nnna6")

[node name="FighterManager" type="Node" parent="." node_paths=PackedStringArray("combat_ui", "player", "combat_arena")]
script = ExtResource("7_7v0sr")
combat_ui = NodePath("../CombatUi")
enemy_prefab = ExtResource("4_kmryn")
player = NodePath("../Player")
combat_arena = NodePath("..")

[connection signal="player_action_selected" from="CombatUi" to="." method="_on_combat_ui_player_action_selected"]
[connection signal="player_move_selected" from="CombatUi" to="." method="_on_combat_ui_player_move_selected"]
[connection signal="all_enemies_died" from="FighterManager" to="." method="_on_fighter_manager_all_enemies_died"]
[connection signal="player_died" from="FighterManager" to="." method="_on_fighter_manager_player_died"]
